@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.1.0.RELEASE</version>
     </parent>
     <modules>
         <module>mns-core</module>
@@ -23,7 +23,7 @@
     </modules>
 
     <properties>
-        <kotlin.version>1.2.61</kotlin.version>
+        <kotlin.version>1.3.10</kotlin.version>
         <jackson.version>2.9.6</jackson.version>
     </properties>
 
@@ -32,19 +32,8 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <argLine>--add-modules java.base</argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
-                    <configuration>
-                        <source>1.10</source>
-                        <target>1.10</target>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
